// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - app invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app configuration: app_id and private_key are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid authentication configuration: type should be "token" or "app"",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid token configuration: personal_access_token is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index streams - copilot seats (empty) 1`] = `
[
  {
    "empty": true,
    "org": "github",
  },
]
`;

exports[`index streams - copilot seats 1`] = `
[
  {
    "created_at": "2021-08-03T18:00:00-06:00",
    "last_activity_at": "2021-10-14T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": null,
    "updated_at": "2021-09-23T15:00:00-06:00",
    "user": "octocat",
  },
  {
    "created_at": "2021-09-23T18:00:00-06:00",
    "last_activity_at": "2021-10-13T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": "2021-11-01",
    "updated_at": "2021-09-23T15:00:00-06:00",
    "user": "octokitten",
  },
]
`;

exports[`index streams - copilot usage 1`] = `
[
  {
    "breakdown": [
      {
        "acceptances_count": 250,
        "active_users": 5,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 700,
        "lines_suggested": 900,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 400,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 350,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 200,
        "lines_suggested": 500,
        "suggestions_count": 400,
      },
    ],
    "day": "2023-10-15",
    "org": "github",
    "total_acceptances_count": 800,
    "total_active_chat_users": 4,
    "total_active_users": 10,
    "total_chat_acceptances": 32,
    "total_chat_turns": 200,
    "total_lines_accepted": 1200,
    "total_lines_suggested": 1800,
    "total_suggestions_count": 1000,
  },
  {
    "breakdown": [
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 600,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 6,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 250,
        "lines_suggested": 300,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 150,
        "lines_suggested": 200,
        "suggestions_count": 200,
      },
    ],
    "day": "2023-10-16",
    "org": "github",
    "total_acceptances_count": 600,
    "total_active_chat_users": 8,
    "total_active_users": 12,
    "total_chat_acceptances": 57,
    "total_chat_turns": 426,
    "total_lines_accepted": 700,
    "total_lines_suggested": 1100,
    "total_suggestions_count": 800,
  },
]
`;

exports[`index streams - organizations 1`] = `
[
  {
    "created_at": "2008-01-14T04:33:35Z",
    "html_url": "https://github.com/octocat",
    "login": "github",
    "name": "github",
    "type": "Organization",
    "updated_at": "2014-03-03T18:58:10Z",
  },
]
`;

exports[`index streams - pull requests 1`] = `
[
  {
    "additions": 1077,
    "author": {
      "html_url": "https://github.com/dolos",
      "login": "dolos",
      "name": "Dolos",
      "type": "User",
    },
    "baseRefName": "main",
    "baseRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "body": "**Related issues**
https://github.com/faros-ai/tickets/issues/120

**Describe the proposed solution**
Optional \`employee\` param changes DORA app behavior to return metrics rolled-up by owner.

**Describe alternatives you've considered**
A clear and concise description of any alternative solutions or features you've considered.

**Additional context**
Add any other context about the changes here.
",
    "changedFiles": 21,
    "comments": {
      "totalCount": 3,
    },
    "commits": {
      "totalCount": 13,
    },
    "createdAt": "2021-02-12T05:35:19Z",
    "deletions": 763,
    "headRefName": "dora-employee-param",
    "headRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "isDraft": false,
    "mergeCommit": {
      "oid": "b4c35c299ad22fe858569482a7696597ca038651",
    },
    "mergedAt": "2021-02-16T17:15:27Z",
    "number": 48,
    "org": "github",
    "repo": "Hello-World",
    "reviewEvents": {
      "nodes": [],
    },
    "state": "MERGED",
    "title": "DORA apps take optional employee uid param",
    "updatedAt": "2021-02-16T17:15:29Z",
    "url": "https://github.com/faros-ai/faros-apps/pull/48",
  },
  {
    "additions": 0,
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "name": "nehanda",
      "type": "User",
    },
    "baseRefName": "main",
    "baseRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "body": "**Related issues**
Ensures we only expose the apps that can run on the latest Faros API 

**Describe the proposed solution**
Moving all apps that are not compatible with our new schema and/or do not have feed and model support yet. As we add more feeds re-add them after full testing.

**Describe alternatives you've considered**
N/A

",
    "changedFiles": 140,
    "comments": {
      "totalCount": 1,
    },
    "commits": {
      "totalCount": 2,
    },
    "createdAt": "2021-02-04T23:54:56Z",
    "deletions": 4787,
    "headRefName": "nehanda/cleanup-apps",
    "headRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "isDraft": false,
    "mergeCommit": null,
    "mergedAt": null,
    "number": 47,
    "org": "github",
    "repo": "Hello-World",
    "reviewEvents": {
      "nodes": [],
    },
    "state": "CLOSED",
    "title": "Move apps with no feed support temporarily to internal",
    "updatedAt": "2021-02-11T18:10:08Z",
    "url": "https://github.com/faros-ai/faros-apps/pull/47",
  },
  {
    "additions": 109,
    "author": {
      "html_url": "https://github.com/nehanda",
      "login": "nehanda",
      "name": null,
      "type": "User",
    },
    "baseRefName": "main",
    "baseRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "faros-ai",
      },
    },
    "body": "Handle cases and add tests for when:
1. Deployments have no associated builds
2. Builds have no associated commits",
    "changedFiles": 2,
    "comments": {
      "totalCount": 0,
    },
    "commits": {
      "totalCount": 9,
    },
    "createdAt": "2021-02-04T15:49:42Z",
    "deletions": 23,
    "headRefName": "fix-edge-cases",
    "headRepository": {
      "name": "faros-apps",
      "owner": {
        "login": "dora",
      },
    },
    "isDraft": false,
    "mergeCommit": {
      "oid": "8fe76c0e99f7e00533181b3749735fcf9fdea206",
    },
    "mergedAt": "2021-02-04T21:53:00Z",
    "number": 46,
    "org": "github",
    "repo": "Hello-World",
    "reviewEvents": {
      "nodes": [],
    },
    "state": "MERGED",
    "title": "Fix edge cases for deploy cycle breakdown",
    "updatedAt": "2021-02-04T21:53:09Z",
    "url": "https://github.com/faros-ai/faros-apps/pull/46",
  },
]
`;

exports[`index streams - repositories 1`] = `
[
  {
    "created_at": "2011-01-26T19:01:12Z",
    "default_branch": "master",
    "description": "This your first repo!",
    "full_name": "octocat/Hello-World",
    "html_url": "https://github.com/octocat/Hello-World",
    "language": null,
    "name": "Hello-World",
    "org": "github",
    "private": false,
    "size": 108,
    "topics": [
      "octocat",
      "atom",
      "electron",
      "api",
    ],
    "updated_at": "2011-01-26T19:14:43Z",
  },
]
`;

exports[`index streams - team memberships 1`] = `
[
  {
    "org": "github",
    "team": "justice-league",
    "user": "octocat",
  },
]
`;

exports[`index streams - teams 1`] = `
[
  {
    "description": "A great team.",
    "name": "Justice League",
    "org": "github",
    "parentSlug": null,
    "slug": "justice-league",
  },
]
`;

exports[`index streams - users 1`] = `
[
  {
    "email": "",
    "html_url": "https://github.com/octocat",
    "login": "octocat",
    "name": "Octocat",
    "org": "github",
    "type": "User",
  },
  {
    "email": "",
    "html_url": "https://github.com/octokitten",
    "login": "octokitten",
    "name": "Octokitten",
    "org": "github",
    "type": "User",
  },
]
`;
